--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Brick Breaker</title>
-    <link rel="stylesheet" href="style.css"> </head>
+    <link rel="stylesheet" href="css/style.css"> </head>
   </head>
 
   <body>
@@ -20,7 +20,7 @@ Lives : <span class="lives">0</span>
   <div class="gameover">Click The Start Game Button</div>
   </div>
 
-  <script src="script.js">
+  <script src="src/script.js">
      
   </script>
 
